[package]
name = "bytebeat"
version = "0.1.0"
edition = "2021"
keywords = [
	"audio",
    "music",
	"DSP",
	"synth",
    "synthesizer"
]

license-file = "LICENSE"
description = "Bytebeat written in Rust."
repository = "https://github.com/chaosprint/bytebeat-rs.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
anyhow = "1.0.70"
clap = { version = "4.1.8", features = ["derive"] }

[features]
default = []

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic